--- a/src/app/main-window/main-window.component.scss
+++ b/src/app/main-window/main-window.component.scss
@@ -103,15 +103,18 @@
 
           textarea {
             box-sizing: border-box;
+            min-height: 52px;
             width: 732px;
             max-height: 200px;
-            height: 52px;
-            overflow-y: hidden;
             padding: 14px 48px 14px 16px;
-            background-color: transparent;
+            white-space: nowrap;
+            overflow: hidden;
             resize: none;
+            background-color: transparent;
             border: 0.5px solid rgb(155, 155, 155);
             border-radius: 16px;
+            color: #fff;
+            font-size: 1rem;
           }
 
           button {
@@ -144,4 +147,3 @@
 .example-sidenav {
   padding: 20px;
 }
-
