--- a/src/app/main-window/main-window.component.html
+++ b/src/app/main-window/main-window.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="example-container">
   <mat-sidenav class="sidenav" #sidenav mode="side" [(opened)]="opened">
-    <app-conversations-panel [conversations]="conversations$ | async">
+    <app-conversations-panel>
     </app-conversations-panel>
   </mat-sidenav>
 
