--- a/src/app/core/message/message.component.html
+++ b/src/app/core/message/message.component.html
@@ -1,6 +1,19 @@
-<div class="message" [ngClass]="role">
-  <div class="message-content">
-    <div class="avatar">{{ role.substr(0, 2) | titlecase }}</div>
+<div class="message">
+  <!-- <div class="message-content">
+
+  </div> -->
+  <div class="avatar-wrapper">
+    @if(role === 'ChatBot'){
+    <div class="avatar-icon bot">
+      <mat-icon svgIcon="chatGptIcon"></mat-icon>
+    </div>
+
+    } @else {
+    <div class="avatar-icon">You</div>
+    }
+  </div>
+  <div class="content-wrapper">
+    <div class="role">{{ role | titlecase }}</div>
     <div class="text">{{ content }}</div>
   </div>
 </div>
