--- a/src/app/main-window/main-window.component.scss
+++ b/src/app/main-window/main-window.component.scss
@@ -49,9 +49,17 @@
     position: fixed;
     width: 100%;
     z-index: 40;
+    color: #fff;
     top: 50%;
     left: 0;
     transition: transform 0.3s;
+  }
+
+  .closed {
+    transform: translateX(0px) translateY(-50%) translateZ(0px);
+  }
+
+  .opened {
     transform: translateX(260px) translateY(-50%) rotate(0deg) translateZ(0px);
   }
 
@@ -62,19 +70,23 @@
     overflow: hidden;
     max-width: 100%;
     height: 100%;
+    padding-top: 40px;
     background-color: #171717;
+    overflow-y: auto;
 
 
-
-    .upper-menu {
+    .input-panel {
+      position: fixed;
+      bottom: 0;
+      width: 80%;
+      height: 82px;
       display: flex;
-      height: 56px;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .grow {
       width: 100%;
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      padding: 8px;
-      border: 0.5px solid rgb(227, 227, 227);
     }
   }
 }
