--- a/src/app/shared/components/input-panel/input-panel.component.scss
+++ b/src/app/shared/components/input-panel/input-panel.component.scss
@@ -1,15 +1,4 @@
 .conversation-input {
-  display: flex;
-  flex-flow: column;
-  position: fixed;
-  height: 86px;
-  z-index: 10;
-  align-items: center;
-  justify-content: center;
-  bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 48rem;
   z-index: 1000;
   background-color: #171717;
 
@@ -40,14 +29,18 @@
 
       button {
         position: absolute;
-        top: 0;
-        right: 0;
-        width: 24px;
-        height: 24px;
+        top: 20px;
+        right: 25px;
+        width: 30px;
+        height: 30px;
+        background: #fff;
+        border-radius: 4px;
       }
     }
 
     .disclaimer {
+      display: flex;
+    justify-content: center;
       color: #fff;
     }
   }
