--- a/src/app/main-window/main-window.component.html
+++ b/src/app/main-window/main-window.component.html
@@ -13,6 +13,7 @@
     >
       <mat-icon>arrow_forward_ios</mat-icon>
     </div>
+    <!-- It's a workaround -- didn't have time to finish... -->
     <app-input-panel
       [ngClass]="{ grow: !opened }"
       class="input-panel"
